Mejoras en la consulta de la base de datos